# cuda_nccl_stf_graph_algs

./: .gitignore  CMakeLists.txt  README.md
benchmarking/: dist_graph_prof.out  output_collection.py  plotting.py  run_tests.sh
benchmarking/output/: bfs_benchmark_results.csv  graph500-scale18-ef16_adj.edges_cpu.out  graph500-scale18-ef16_adj.edges_gpu.out  graph500-scale18-ef16_adj.edges_gpu_stf.out  graph500-scale19-ef16_adj.edges_cpu.out  graph500-scale19-ef16_adj.edges_gpu.out  graph500-scale19-ef16_adj.edges_gpu_stf.out  graph500-scale21-ef16_adj.edges_cpu.out  graph500-scale21-ef16_adj.edges_gpu.out  graph500-scale21-ef16_adj.edges_gpu_stf.out  graph500-scale23-ef16_adj.edges_cpu.out  graph500-scale23-ef16_adj.edges_gpu.out  graph500-scale23-ef16_adj.edges_gpu_stf.out  web-uk-2002-all.mtx_cpu.out  web-uk-2002-all.mtx_gpu.out  web-uk-2002-all.mtx_gpu_stf.out
resources/: debugging_notes.txt  miniWeather_cudastf.cu  plotting_thoughts.txt
src/: Makefile  cpu_dist_bfs.cpp  dist_bfs_kernels.cuh  distributed_bfs.cpp  helper_kernels.cuh  mpi_nccl_testing  mpi_nccl_testing.cu  nccl_testing.cu  pagerank.cpp  pagerank_kernels.cu
src/_failed/: dist_bfs_kernels.cuh  distributed_bfs.cpp  helper_kernels.cuh
src/dist_bfs/: cpu_dist_bfs.cpp  cpu_dist_bfs_openmp.cpp  dist_bfs_kernels.cuh  distributed_bfs.cpp  distributed_bfs_graphvis.cpp  no_bfs_kernels.cuh  no_stf_dist_bfs.cpp
src/pagerank/: cpu_pagerank.cpp  pagerank.cpp  pagerank_kernels.cuh
tests/: CMakeLists.txt  Makefile  connected_comp_test  connected_comp_test.cpp  degree_finder  degree_finder.cpp  extreme_nodes.txt  graph_test  graph_testing.cpp  mpi_nccl_testing.cpp  resources.txt  stf_test.cu
